--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,29 @@
 .App {
-  background-color: transparent;
+  max-width: 860px;
+  margin: 40px auto;
+}
+
+.card-grid {
+  gap: 16px;
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  margin-top: 40px;
+}
+
+.card {
+  position: relative;
+}
+
+.card img {
+  width: 100%;
+  display: block;
+}
+
+.card .front {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  transform: rotateY(90deg);
 }
