--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,15 @@
   margin: 40px auto;
 }
 
+.title {
+  display: block;
+  margin: 0 auto;
+  text-align: center;
+  margin: 64px;
+  font-size: 4rem;
+  text-transform: capitalize;
+}
+
 .card-grid {
   gap: 16px;
   display: grid;
@@ -10,20 +19,26 @@
   margin-top: 40px;
 }
 
-.card {
-  position: relative;
-}
-
-.card img {
-  width: 100%;
+.start-btn {
+  padding: 1rem 4rem;
+  font-size: 1.5rem;
+  margin: 0 auto;
   display: block;
+  text-transform: uppercase;
+  border: solid 4px white;
+  border-radius: 8px;
+  background-color: transparent;
+  transition: background-color 0.2s;
+  color: white;
 }
 
-.card .front {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  transform: rotateY(90deg);
+.start-btn:hover {
+  background-color: #481862;
+}
+
+.turns {
+  margin-top: 32px;
+  text-align: center;
+  font-size: 1.25rem;
+  text-transform: uppercase;
 }
