--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,7 @@
 body {
   width: 100vw;
   height: 100vh;
+  color: white;
   background-color: #1c0926;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
