--- a/src/App.scss
+++ b/src/App.scss
@@ -1,9 +1,9 @@
 .App {
-  $primary-color: #222823;
-  $secondary-color: #575a5e;
-  $tertiary-color: #f4f7f5;
-  $muted-color: #a7a2a9;
-  $text-color: #08090a;
+  $some-color: #222823;
+  $some-color: #575a5e;
+  $some-color: #f4f7f5;
+  $some-color: #a7a2a9;
+  $some-color: #08090a;
 
   background-color: lighten(#222823, $amount: 80);
   color: #08090a;
