--- a/src/components/AppNavbar.scss
+++ b/src/components/AppNavbar.scss
@@ -1,9 +1,19 @@
 .app-navbar {
+  $nav-background: #222823;
+  $nav-color: #f4f7f5;
+  $nav-size: 80px;
+
   display: block;
+  background: $nav-background;
+  height: $nav-size;
   width: 100%;
-  height: 80px;
-  background-color: #222823;
-  color: #f4f7f5;
+  color: $nav-color;
+
+  a {
+    color: $nav-color;
+    display: flex;
+    align-items: center;
+  }
 
   .title {
     margin: 0 16px;
