--- a/src/index.scss
+++ b/src/index.scss
@@ -9,6 +9,10 @@
 body {
   font-family: 'Fredoka One', cursive;
   font-family: 'Montserrat', sans-serif;
+
+  #root {
+    height: 100vh;
+  }
 }
 
 a {
