--- a/src/App.scss
+++ b/src/App.scss
@@ -5,11 +5,15 @@
   $some-color: #a7a2a9;
   $some-color: #08090a;
 
-  .page-title {
-    text-align: center;
-    margin-top: 48px;
-    margin-bottom: 54px;
-    text-transform: uppercase;
+  .page {
+    margin: 48px 0;
+
+    .page-title {
+      text-align: center;
+      margin-top: 48px;
+      margin-bottom: 54px;
+      text-transform: uppercase;
+    }
   }
 
   .card {
@@ -18,6 +22,8 @@
     cursor: pointer;
 
     .card-header {
+      border-top-left-radius: 8px;
+      border-top-right-radius: 8px;
       background: #575a5e;
       color: #f4f7f5;
       padding: 24px;
@@ -27,10 +33,21 @@
       justify-content: flex-end;
     }
 
-    .card-body {
+    .card-body,
+    .card-footer {
       background: #f4f7f5;
       color: #222823;
       padding: 24px;
+    }
+
+    .card-body {
+      margin-top: 24px;
+      line-height: 1.5;
+    }
+
+    .card-footer {
+      display: flex;
+      justify-content: space-between;
     }
   }
 }
