--- a/src/index.scss
+++ b/src/index.scss
@@ -6,12 +6,64 @@
   box-sizing: border-box;
 }
 
+html {
+  font-size: 100%;
+} /*16px*/
+
 body {
   font-family: 'Fredoka One', cursive;
   font-family: 'Montserrat', sans-serif;
   background: lighten(#222823, $amount: 80);
+  line-height: 1.75;
 }
 
+// typescale = major second
+p {
+  margin-bottom: 1rem;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5 {
+  margin: 3rem 0 1.38rem;
+  font-family: 'Montserrat', sans-serif;
+  font-weight: 500;
+  line-height: 1.3;
+}
+
+h1 {
+  margin-top: 0;
+  font-size: 2.488rem;
+}
+
+h2 {
+  font-size: 2.074rem;
+}
+
+h3 {
+  font-size: 1.728rem;
+}
+
+h4 {
+  font-size: 1.44rem;
+}
+
+h5 {
+  font-size: 1.2rem;
+}
+
+small,
+.text_small {
+  font-size: 0.833rem;
+}
+
+// common tags
 a {
   text-decoration: none;
+}
+
+ul {
+  list-style: none;
 }
