--- a/src/App.scss
+++ b/src/App.scss
@@ -10,8 +10,6 @@
 
     .page-title {
       text-align: center;
-      // margin-top: 48px;
-      // margin-bottom: 54px;
       text-transform: uppercase;
     }
   }
@@ -30,6 +28,20 @@
       display: flex;
       flex-direction: column;
       justify-content: flex-end;
+
+      .card-header-title {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+
+        h1,
+        h2,
+        h3,
+        h4,
+        h5 {
+          margin: 0;
+        }
+      }
     }
 
     .card-body,
@@ -42,6 +54,22 @@
     .card-footer {
       display: flex;
       justify-content: space-between;
+    }
+
+    .card-actions {
+      display: flex;
+      align-items: center;
+
+      .card-action-item {
+        padding: 0 8px;
+        margin: 0 8px;
+        cursor: pointer;
+
+        &:last-child {
+          padding: 0 0 0 8px;
+          margin: 0 0 0 8px;
+        }
+      }
     }
   }
 }
