--- a/src/index.scss
+++ b/src/index.scss
@@ -68,3 +68,19 @@ a {
 ul {
   list-style: none;
 }
+
+button {
+  border: none;
+  padding: 16px;
+  color: #f4f7f5;
+  background: #575a5e;
+  border-radius: 4px;
+  min-width: 144px;
+  margin: 0 8px;
+  cursor: pointer;
+  transition: all 0.2s;
+
+  &:hover {
+    background: #222823;
+  }
+}
